--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -5,8 +5,8 @@
     <string name="onboarding_title_2">Hand Wash &amp; Sanitize</string>
     <string name="onboarding_title_3">Pyshical Distancing</string>
     <string name="onboarding_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat felis sit eget euismod et vulputate. Vitae lacus, maecenas odio ac.</string>
-    <string name="statistics">Statistics</string>
-    <string name="language">EN</string>
-    <string name="select_country">Select Country</string>
-    <string name="last_update">Last update</string>
+    <string name="statistics">Statistik</string>
+    <string name="language">ID</string>
+    <string name="select_country">Pilih Negara</string>
+    <string name="last_update">Terakhir diperbarui</string>
 </resources>
