Add ratio chart

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -15,4 +15,6 @@
     <string name="death">Meninggal</string>
     <string name="_0">0</string>
     <string name="ratio_of_nrecovery">Rasio of\nPemulihan</string>
+    <string name="recovered_n">Terselamatkan\n</string>
+    <string name="affected_n">Terdampak\n</string>
 </resources>
